--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "description": "Mangles acronyms in Slack",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "RocketBit.co",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "eslint": "^5.7.0",
     "express": "^4.14.0",
     "word-list": "^1.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.4"
   }
 }
