--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "eslint": "^5.7.0",
+    "event-stream": "^4.0.1",
     "express": "^4.14.0",
     "word-list": "^1.0.1"
   },
