--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine"
   },
   "author": "RocketBit.co",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "word-list": "^1.0.1"
   },
   "devDependencies": {
+    "jasmine": "^3.6.2",
     "nodemon": "^1.18.4"
   }
 }
